# ttrack

./: .gitignore  CMakeLists.txt  Doxyfile  KeyPoints.xml  Keypoints2.xml  LICENCE.txt  README  README.md  cleanpoints.py  images.py  points.ply  points.txt  ttrack.sln  whatever.txt  withoutmask.xyz
CMakeModules/: FindBoost.cmake  FindCinder.cmake  FindMathGL2.cmake  SetPlatformVars.cmake
build-win/: CMakeCache.txt  resource.h
doxygen/html/: annotated.html  classes.html  classttrk_1_1TTrack-members.html  classttrk_1_1TTrack.html  files.html  functions.html  functions_func.html  functions_vars.html  headers_8h_source.html  index.html  namespaces.html  namespacettrk.html  ttrack_8h_source.html
doxygen/html/search/: all_63.html  all_69.html  all_74.html  classes_74.html  functions_73.html  namespaces_74.html  search.js  variables_74.html
doxygen/latex/: annotated.tex  classttrk_1_1TTrack.tex  doxygen.sty  index.tex  namespaces.tex  namespacettrk.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
examples/: app.cfg  app_ipcai.cfg  app_miccai.cfg  app_tmi.cfg  model.json
examples/camera/: config.xml
examples/classifier/: config_2class.xml
examples/model/: example.mtl  model.json
frame_0/debug/: energy_file.csv  translation_plot_1.csv  translation_plot_2.csv  translation_plot_3.csv  y_energy_plot.csv
headers/: RandomForest.hpp  baseclassifier.hpp  camera.hpp  classifier.h  classifier.hpp  cross_validate.hpp  detect.hpp  exceptions.hpp  handler.hpp  headers.h  headers.hpp  helpers.hpp  im_mask_set.hpp  kalman.hpp  model.hpp  mono_pwp3d.hpp  nd_image.hpp  pwp3d.hpp  randomforest.hpp  supportvectormachine.hpp  surgical_tool_tracker.hpp  tracker.hpp  train.hpp  train_separate.hpp  ttrack.hpp
headers/detect/: baseclassifier.hpp  detect.hpp
headers/track/: kalman.hpp  localizer.hpp  model.hpp  pose.hpp  tracker.hpp
headers/track/model/: model.hpp
headers/track/model/fast_bvh/: BBox.h  IntersectionInfo.h  Sphere.h  Stopwatch.h  Triangle.h  Vector3.h
headers/track/pwp3d/: mono_pwp3d.hpp  pwp3d.hpp  register_points.hpp  stereo_pwp3d.hpp
headers/track/stt/: monocular_tool_tracker.hpp  stereo_tool_tracker.hpp  surgical_tool_tracker.hpp
headers/utils/: camera.hpp  handler.hpp  helpers.hpp  nd_image.hpp  quasi_dense_stereo.hpp  quaternion.hpp  renderer.hpp
include/: constants.hpp  headers.hpp  resources.hpp  ttrack.hpp  ttrack_app.hpp
include/detect/: baseclassifier.hpp  detect.hpp  randomforest.hpp  supportvectormachine.hpp
include/track/: kalman.hpp  localizer.hpp  pose.hpp  tracker.hpp
include/track/articulated/: articulated_level_set.hpp
include/track/model/: articulated_model.hpp  dh_helpers.hpp  model.hpp  node.hpp
include/track/model/fast_bvh/: IntersectionInfo.h  Triangle.h  Vector3.h
include/track/pwp3d/: mono_pwp3d.hpp  pwp3d.hpp  register_points.hpp  stereo_pwp3d.hpp
include/track/stt/: monocular_tool_tracker.hpp  stereo_tool_tracker.hpp  surgical_tool_tracker.hpp
include/track/temporal/: temporal.hpp
include/ttrack/: constants.hpp  headers.hpp  resources.hpp  ttrack.hpp  ttrack_app.hpp
include/ttrack/detect/: baseclassifier.hpp  detect.hpp  histogram.hpp  im_mask_set.hpp  multiclass_randomforest.hpp  randomforest.hpp  supportvectormachine.hpp
include/ttrack/track/: localizer.hpp  pose.hpp  tracker.hpp
include/ttrack/track/articulated/: articulated_level_set.hpp  articulated_solver.hpp
include/ttrack/track/localizer/: articulated_component_level_set.hpp  localizer.hpp
include/ttrack/utils/: UI.hpp  camera.hpp  config_reader.hpp  handler.hpp  helpers.hpp  image.hpp  nd_image.hpp  plotter.hpp  sub_window.hpp
include/utils/: camera.hpp  handler.hpp  helpers.hpp  nd_image.hpp  primitives.hpp  quasi_dense_stereo.hpp  quaternion.hpp  renderer.hpp  result_plotter.hpp
resources/: comp_ls_back_depth_contour_frag.glsl  comp_ls_back_depth_contour_vert.glsl  intuitive.json  intuitive_astree.json  phong_frag.glsl  pwp3d_back_depth_contour_frag.glsl  pwp3d_back_depth_contour_vert.glsl  pwp3d_front_depth_frag.glsl  pwp3d_front_depth_vert.glsl  resource.h  resources.aps  resources.rc
scripts/: data_analyser.py  images.py  process_results.py  remove_nl.py  synthetic_remove_bad.py  train.py
src/: CMakeLists.txt  RandomForest.cpp  baseclassifier.cpp  camera.cpp  classifier.cpp  cross_validate.cpp  detect.cpp  handler.cpp  helpers.cpp  im_mask_set.cpp  main.cpp  model.cpp  monocular_tool_tracker.cpp  nd_image.cpp  pwp3d.cpp  randomforest.cpp  stereo_tool_tracker.cpp  supportvectormachine.cpp  surgical_tool_tracker.cpp  tracker.cpp  train.cpp  train_separate.cpp  ttrack.cpp  ttrackApp.cpp  ttrack_app.cpp
src/detect/: baseclassifier.cpp  detect.cpp  histogram.cpp  im_mask_set.cpp  multiclass_randomforest.cpp  randomforest.cpp  supportvectormachine.cpp
src/track/: kalman.cpp  pose.cpp  tracker.cpp
src/track/articulated/: articulated_level_set.cpp  articulated_solver.cpp
src/track/localizer/: articulated_component_level_set.cpp
src/track/localizer/features/: descriptor.cpp  feature_localizer.cpp  lk_tracker.cpp  register_points.cpp
src/track/localizer/levelsets/: articulated_component_level_set.cpp  articulated_level_set.cpp  articulated_solver.cpp  comp_ls.cpp  comp_ls.cu  level_set_forest.cpp  mono_pwp3d.cpp  pwp3d.cpp  pwp3d.cu  stereo_pwp3d.cpp
src/track/model/: articulated_model.cpp  model.cpp  node.cpp  pose.cpp
src/track/model/fast_bvh/: BBox.cpp  BVH.cpp
src/track/pwp3d/: comp_ls.cpp  descriptor.cpp  lk_tracker.cpp  mono_pwp3d.cpp  pose.cpp  pwp3d.cpp  register_points.cpp  stereo_pwp3d.cpp
src/track/stt/: monocular_tool_tracker.cpp  stereo_tool_tracker.cpp  surgical_tool_tracker.cpp
src/track/temporal/: temporal.cpp
src/track/tracker/: monocular_tool_tracker.cpp  stereo_tool_tracker.cpp  surgical_tool_tracker.cpp  tracker.cpp
src/utils/: camera.cpp  handler.cpp  helpers.cpp  model.cpp  nd_image.cpp  plotter.cpp  quasi_dense_stereo.cpp  quaternion.cpp  renderer.cpp  sub_window.cpp
tests/: all_tests.cpp  camera_tests.cpp  model_tests.cpp  pose_tests.cpp  ttrack_tests.cpp
(+33 files in other folders)
